@startuml
!pragma layout smetana
skinparam dpi 240
skinparam shadowing false
skinparam linetype ortho
skinparam classAttributeIconSize 0
skinparam defaultFontName Arial
skinparam classFontSize 15
skinparam packageFontSize 18
skinparam ArrowFontSize 12
skinparam classBackgroundColor<<screen>> #DCEEFF
skinparam classBorderColor<<screen>> #2F6FA3
skinparam classBackgroundColor<<util>> #EFEFEF
skinparam classBorderColor<<util>> #777777
hide empty methods
title Family Tasks - Firebase And Utility Classes
caption Current utility classes and the screens that read or write Firebase.

note as SimpleFirebaseNote
Firebase actions stay inside the screens.
This keeps each screen simple to explain in the exam.
end note

package "utils" #EFEFEF {
class DateUtils <<util>>
class ImageHelper <<util>>
}

package "Firebase screens" #DCEEFF {
class ParentRegisterFragment <<screen>>
class ChildQRLoginFragment <<screen>>
class ChildSelectionActivity <<screen>>
class ParentDashboardActivity <<screen>>
class ManageChildrenActivity <<screen>>
class AssignTaskToChildActivity <<screen>>
class ParentTaskTemplateActivity <<screen>>
class ChildDashboardActivity <<screen>>
}

ParentDashboardActivity ..> DateUtils
AssignTaskToChildActivity ..> ImageHelper
ParentTaskTemplateActivity ..> ImageHelper
ChildDashboardActivity ..> DateUtils

note right of ParentRegisterFragment
Writes the parent profile under
/parents/{uid}/profile:
uid, firstName, lastName, email,
role.
end note

note right of ChildQRLoginFragment
Reads /parents/{parentId}
and checks snapshot.exists() after QR scan.
end note

note right of ChildSelectionActivity
Reads children under
/parents/{parentId}/children.
end note

note right of ParentDashboardActivity
Reads /parents/{uid}/profile/firstName
for the greeting.
Reads all children and tasks under
/parents/{uid}/children.
end note

note right of ManageChildrenActivity
Adds, edits and deletes child records under
/parents/{uid}/children.
end note

note right of AssignTaskToChildActivity
Writes a new ChildTask under
/parents/{uid}/children/{childId}/tasks.
end note

note right of ParentTaskTemplateActivity
Reads and writes templates under
/parents/{uid}/task_templates.
end note

note right of ChildDashboardActivity
Reads one child's tasks and updates
the isDone field when a task is completed.
end note
@enduml
